[PRE] Add user domain on #3
