# database/factories/Infrastructure/Models/UserFactory.php
@@ -1,0 +1,33 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Database\Factories\Infrastructure\Models;
+
+use App\Infrastructure\Models\User;
+use Illuminate\Database\Eloquent\Factories\Factory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * @extends Factory<User>
+ */
+final class UserFactory extends Factory
+{
+    /**
+     * @var class-string<Model>
+     */
+    protected $model = User::class;
+
+    /**
+     * @return array<string, mixed>
+     */
+    public function definition(): array
+    {
+        return [
+            'id' => $this->faker->uuid,
+            'name' => $this->faker->name,
+            'email' => $this->faker->email,
+            'password' => $this->faker->password,
+        ];
+    }
+}
